# MyWeld-ESP32

./: .gitignore  CMakeLists.txt  README.md  fix_lvgl_asm.py  name_firmware.py  partitions.csv  partitions_4mb.csv  pin-definition.txt  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.jc4827w543  sdkconfig.esp32s3_lcd2004  sdkconfig.jc3248w535  sdkconfig.jc3248w535_debug
DOCS/: ble-ota-update.md  circuit-diagram.md  circuit-schematics.html  devkit-lcd2004-pinout.md  future-improvements.md  myweld-android-app.md  myweld-esp32-adaptation.md
Schematic/: Free Documents.OutJob  MyWeld-ESP32.OutJob  MyWeld-ESP32.PrjPcb  Sheet1-ascii.SchDoc  Sheet1.SchDoc  esp32-jc3248W535.SchLib
Schematic/easyeda/: MyWeld-ESP32.eprj
Schematic/easyida/: MyWeld-ESP32.eprj
src/: CMakeLists.txt  audio.c  audio.h  audio_hal.h  ble_protocol.h  ble_serial.c  ble_serial.h  board_config.h  buzzer.c  buzzer.h  config.h  display.c  display.h  display_hal.h  encoder.c  encoder.h  esp_lcd_axs15231b.c  esp_lcd_nv3041a.c  esp_lcd_nv3041a.h  esp_lcd_touch.c  hw_descriptor.c  hw_descriptor.h  lcd1604.c  lcd1604.h  lcd2004.c  lcd2004.h  lv_conf.h  main.c  nextion.c  nextion.h  ota.c  ota.h  settings.c  settings.h  st7567s.c  st7567s.h  status_led.c  status_led.h  ui.c  ui.h  (+3 more)
